--- a/Keylogger.cbp
+++ b/Keylogger.cbp
@@ -32,6 +32,11 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Base64.h" />
+		<Unit filename="Helper.h" />
+		<Unit filename="IO.h" />
+		<Unit filename="KeyConstants.h" />
+		<Unit filename="Timer.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
